@@ -8,7 +8,8 @@
 - add vips_init_argv() which processes argc/argv for you? handy for tiny
   progs, perhaps
 
-- add vips_shutdown()? unload plugins, drop cache etc.
+- add vips_shutdown()? unload plugins, drop cache etc. could test for leaks
+  too
 
 
 
