@@ -207,6 +207,8 @@ main( int argc, char **argv )
 
 	im_close( im );
 
+	vips_shutdown();
+
 	return( 0 );
 }
 
